edit tutorials notebook
mostly to add `api=True, token=token` to certain function calls

--- a/ECHO_modules_delta_api_Tutorials.ipynb
+++ b/ECHO_modules_delta_api_Tutorials.ipynb
@@ -95,6 +95,7 @@
       },
       "outputs": [],
       "source": [
+        "# Installation of these not necessary in default Colab environment (already installed)\n",
         "!pip install geopandas &>/dev/null;\n",
         "!pip install matplotlib &>/dev/null;\n",
         "!pip install folium &>/dev/null;\n",
@@ -108,6 +109,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Clone the ECHO_modules delta branch\n",
         "!git clone -b echo-modules-delta https://github.com/edgi-govdata-archiving/ECHO_modules.git &>/dev/null;\n",
         "%cd ECHO_modules"
       ],
@@ -326,7 +328,7 @@
         "    \"Effluent Violations\",\n",
         "])\n",
         "## These are described in more detail here: https://github.com/edgi-govdata-archiving/ECHO_modules/blob/main/ECHO_modules/data_set_presets.py\n",
-        "## and here: https://echo.epa.gov/tools/data-downloads#downloads\n"
+        "## and here: https://echo.epa.gov/tools/data-downloads#downloads"
       ]
     },
     {
@@ -374,7 +376,8 @@
       "source": [
         "# Store results for this DataSet as a DataSetResults object\n",
         "erie_rcra_violations = data_sets[\"RCRA Violations\"].store_results(\n",
-        "    region_type=\"County\", region_value=[\"ERIE\"], state=\"NY\", years=year_range.value)\n",
+        "    region_type=\"County\", region_value=[\"ERIE\"], state=\"NY\",\n",
+        "    years=year_range.value, api=True, token=token)\n",
         "erie_rcra_violations.dataframe # Show the results as a dataframe"
       ]
     },
@@ -461,7 +464,7 @@
       "outputs": [],
       "source": [
         "from ECHO_modules_delta.utilities import polygon_map\n",
-        "area_of_interest = polygon_map()\n"
+        "area_of_interest = polygon_map()"
       ]
     },
     {
@@ -476,7 +479,7 @@
         "# Populate the CAA Violations DataSet that was created earlier.\n",
         "# Store results for this DataSet as a DataSetResults object\n",
         "try:\n",
-        "    aoi_caa_violations = data_sets[\"CAA Violations\"].store_results( region_type=\"Neighborhood\",\n",
+        "    aoi_caa_violations = data_sets[\"RCRA Violations\"].store_results( region_type=\"Neighborhood\",\n",
         "                            region_value=list(area_of_interest)[0], years=[2020,2024], api=True, token=token)\n",
         "except EmptyDataError:\n",
         "    print(\"There are no records in that region for this data set.\")\n",
@@ -617,14 +620,16 @@
         "from ECHO_modules_delta.make_data_sets import make_data_sets # Import relevant module\n",
         "from ECHO_modules_delta.utilities import aggregate_by_facility, point_mapper # Import relevant modules\n",
         "\n",
-        "ds = make_data_sets([\"CWA Inspections\"]) # Create a DataSet for handling the data\n",
+        "ds = make_data_sets([\"RCRA Inspections\"]) # Create a DataSet for handling the data\n",
         "# Store results for this DataSet as a DataSetResults object\n",
-        "buffalo_cwa_inspections = ds[\"CWA Inspections\"].store_results(\n",
-        "    region_type=\"Zip Code\", region_value='14201,14202,14203')\n",
+        "buffalo_cwa_inspections = ds[\"RCRA Inspections\"].store_results(\n",
+        "    region_type=\"Zip Code\", region_value='14201,14202,14203',\n",
+        "    api=True, token=token)\n",
         "aggregated_results = aggregate_by_facility(\n",
         "    records = buffalo_cwa_inspections,\n",
         "    program = buffalo_cwa_inspections.dataset.name,\n",
-        "    other_records=True) # Aggregate each entry using this function\n",
+        "    other_records=True,\n",
+        "    api=True, token=token) # Aggregate each entry using this function\n",
         "# Map each facility as a point, the size of which corresponds to the number of reported violations since 2001.\n",
         "point_mapper(aggregated_results[\"data\"], aggregated_results[\"aggregator\"],\n",
         "             quartiles=True, other_fac=aggregated_results[\"diff\"])"
@@ -697,7 +702,12 @@
         "ny_ghg = data_sets[\"Greenhouse Gas Emissions\"].store_results(\n",
         "    region_type=\"State\", region_value = \"NY\", state = \"NY\",\n",
         "    years=[2016,2024], api=True, token=token)\n",
-        "ny_ghg.show_chart() # Total reported emissions in lbs (normalized to CO2e)\n",
+        "ny_ghg.show_chart() # Total reported emissions in lbs (normalized to CO2e)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "ny_tri = data_sets[\"Toxic Releases\"].store_results(\n",
         "    region_type=\"State\", region_value = \"NY\", state = \"NY\",\n",
         "    years=[2016,2024], api=True, token=token)\n",
@@ -707,7 +717,12 @@
         "ny_tri.dataframe = ny_tri.dataframe.loc[\n",
         "    ny_tri.dataframe['POLLUTANT_NAME'].str.lower().str.contains(\"mercury\")]\n",
         "ny_tri.show_chart() # Chart total mercury emissions in lbs"
-      ]
+      ],
+      "metadata": {
+        "id": "hiRQyBQDV01O"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -833,13 +848,16 @@
       },
       "outputs": [],
       "source": [
+        "\"\"\"\n",
+        "# Won't work until we load EJScreen data\n",
         "from ECHO_modules.get_data import get_echo_data\n",
         "\n",
         "# This query selects Census Block Group records from EJScreen for the state of New York and where the % of the population defined as a racial minority is greater than 75% and the % of the population defined as low-income is greater than 50%\n",
         "sql = 'SELECT * FROM \"EJSCREEN_2021_USPR\" WHERE \"ST_ABBREV\" = \\'NY\\' ' +\\\n",
         "'AND \"MINORPCT\" > .75 AND \"LOWINCPCT\" > .5'\n",
         "results = get_echo_data(sql)\n",
-        "results"
+        "results\n",
+        "\"\"\""
       ]
     },
     {
