Preparing merge to main branch

--- a/ECHO_modules_Tutorials.ipynb
+++ b/ECHO_modules_Tutorials.ipynb
@@ -136,7 +136,7 @@
       },
       "outputs": [],
       "source": [
-        "from ECHO_modules_delta.get_data import get_echo_api_access_token\n",
+        "from ECHO_modules.get_data import get_echo_api_access_token\n",
         "\n",
         "token = get_echo_api_access_token()"
       ]
@@ -162,7 +162,7 @@
       },
       "outputs": [],
       "source": [
-        "from ECHO_modules_delta.utilities import get_active_facilities # Use the get_active_facilities function\n",
+        "from ECHO_modules.utilities import get_active_facilities # Use the get_active_facilities function\n",
         "\n",
         "erie = get_active_facilities(\"NY\", \"County\", [\"ERIE\"], api=True, token=token)\n",
         "erie"
@@ -190,7 +190,7 @@
       "outputs": [],
       "source": [
         "## You may enter a name to use for the file, or use the one provided.\n",
-        "from ECHO_modules_delta.utilities import dataset_filename, write_dataset\n",
+        "from ECHO_modules.utilities import dataset_filename, write_dataset\n",
         "\n",
         "filename_widget = dataset_filename(base='Facilities',\n",
         "               type='County', state='NY', regions=['Erie'])"
@@ -213,7 +213,7 @@
       },
       "outputs": [],
       "source": [
-        "from ECHO_modules_delta.utilities import write_dataset\n",
+        "from ECHO_modules.utilities import write_dataset\n",
         "write_dataset(erie, filename_widget.value)"
       ]
     },
@@ -239,7 +239,7 @@
       "source": [
         "# Next, we enter the dataframe of Erie County facilities into the get_top_violators() function, then use chart_top_violators to visualize the result\n",
         "# Use get_top_violators and chart_top_violators\n",
-        "from ECHO_modules_delta.utilities import get_top_violators, chart_top_violators\n",
+        "from ECHO_modules.utilities import get_top_violators, chart_top_violators\n",
         "\n",
         "erie_top_violators = get_top_violators( erie, flag = 'RCRA_FLAG',\n",
         "                                       noncomp_field = 'RCRA_3YR_COMPL_QTRS_HISTORY',\n",
@@ -267,9 +267,9 @@
       "outputs": [],
       "source": [
         "import geopandas # Import a Python package for creating spatial dataframes\n",
-        "from ECHO_modules_delta.get_data import get_spatial_data # Module for getting spatial data from the SBU database\n",
-        "from ECHO_modules_delta.geographies import spatial_tables # Variables that support spatial queries\n",
-        "from ECHO_modules_delta.utilities import bivariate_map, map_style # Use this function and variable to make our map\n",
+        "from ECHO_modules.get_data import get_spatial_data # Module for getting spatial data from the SBU database\n",
+        "from ECHO_modules.geographies import spatial_tables # Variables that support spatial queries\n",
+        "from ECHO_modules.utilities import bivariate_map, map_style # Use this function and variable to make our map\n",
         "\n",
         "# Query and return spatial data\n",
         "county, state = get_spatial_data( region_type = \"County\", states = [\"NY\"],\n",
@@ -303,7 +303,7 @@
       },
       "outputs": [],
       "source": [
-        "from ECHO_modules_delta.make_data_sets import make_data_sets\n",
+        "from ECHO_modules.make_data_sets import make_data_sets\n",
         "\n",
         "## List of datasets to choose from\n",
         "data_sets = make_data_sets([\n",
@@ -352,7 +352,7 @@
       },
       "outputs": [],
       "source": [
-        "from ECHO_modules_delta.utilities import show_year_range_widget\n",
+        "from ECHO_modules.utilities import show_year_range_widget\n",
         "## Slide the endpoints to the desired years\n",
         "year_range = show_year_range_widget()"
       ]
@@ -418,7 +418,7 @@
       },
       "outputs": [],
       "source": [
-        "from ECHO_modules_delta.utilities import aggregate_by_facility, point_mapper # Import relevant modules\n",
+        "from ECHO_modules.utilities import aggregate_by_facility, point_mapper # Import relevant modules\n",
         "\n",
         "erie_rcra_violations.region_value=[\"ERIE\"] # (re)set the region_value as a list\n",
         "# Aggregate each entry using this function. In the case of RCRA violations,\n",
@@ -463,7 +463,7 @@
       },
       "outputs": [],
       "source": [
-        "from ECHO_modules_delta.utilities import polygon_map\n",
+        "from ECHO_modules.utilities import polygon_map\n",
         "area_of_interest = polygon_map()"
       ]
     },
@@ -511,9 +511,9 @@
       },
       "outputs": [],
       "source": [
-        "from ECHO_modules_delta.get_data import get_spatial_data\n",
-        "from ECHO_modules_delta.geographies import spatial_tables\n",
-        "from ECHO_modules_delta.utilities import show_regions\n",
+        "from ECHO_modules.get_data import get_spatial_data\n",
+        "from ECHO_modules.geographies import spatial_tables\n",
+        "from ECHO_modules.utilities import show_regions\n",
         "\n",
         "# We look up intersecting watersheds on a state(s) basis.\n",
         "watersheds, state = get_spatial_data(region_type = \"Watershed\", states = [\"NY\"],\n",
@@ -617,8 +617,8 @@
       },
       "outputs": [],
       "source": [
-        "from ECHO_modules_delta.make_data_sets import make_data_sets # Import relevant module\n",
-        "from ECHO_modules_delta.utilities import aggregate_by_facility, point_mapper # Import relevant modules\n",
+        "from ECHO_modules.make_data_sets import make_data_sets # Import relevant module\n",
+        "from ECHO_modules.utilities import aggregate_by_facility, point_mapper # Import relevant modules\n",
         "\n",
         "ds = make_data_sets([\"RCRA Inspections\"]) # Create a DataSet for handling the data\n",
         "# Store results for this DataSet as a DataSetResults object\n",
@@ -658,8 +658,8 @@
       },
       "outputs": [],
       "source": [
-        "from ECHO_modules_delta.make_data_sets import make_data_sets # Import relevant modules\n",
-        "from ECHO_modules_delta.utilities import aggregate_by_facility, point_mapper\n",
+        "from ECHO_modules.make_data_sets import make_data_sets # Import relevant modules\n",
+        "from ECHO_modules.utilities import aggregate_by_facility, point_mapper\n",
         "\n",
         "ny_cds_caa_inspections = data_sets[\"CAA Inspections\"].store_results(\n",
         "    region_type=\"Congressional District\", region_value=[\"25\", \"26\"], state = \"NY\",\n",
@@ -696,8 +696,8 @@
       },
       "outputs": [],
       "source": [
-        "from ECHO_modules_delta.make_data_sets import make_data_sets # Import relevant modules\n",
-        "from ECHO_modules_delta.utilities import aggregate_by_facility, point_mapper\n",
+        "from ECHO_modules.make_data_sets import make_data_sets # Import relevant modules\n",
+        "from ECHO_modules.utilities import aggregate_by_facility, point_mapper\n",
         "\n",
         "ny_ghg = data_sets[\"Greenhouse Gas Emissions\"].store_results(\n",
         "    region_type=\"State\", region_value = \"NY\", state = \"NY\",\n",
@@ -745,9 +745,9 @@
       },
       "outputs": [],
       "source": [
-        "from ECHO_modules_delta.get_data import get_spatial_data # Module for getting spatial data from the SBU database\n",
-        "from ECHO_modules_delta.geographies import spatial_tables # Variables that support spatial queries\n",
-        "from ECHO_modules_delta.utilities import bivariate_map, map_style # Use this function and variable to make our map\n",
+        "from ECHO_modules.get_data import get_spatial_data # Module for getting spatial data from the SBU database\n",
+        "from ECHO_modules.geographies import spatial_tables # Variables that support spatial queries\n",
+        "from ECHO_modules.utilities import bivariate_map, map_style # Use this function and variable to make our map\n",
         "import geopandas\n",
         "\n",
         "dmrs = data_sets[\"2022 Discharge Monitoring\"].store_results(region_type=\"Watershed\",\n",
@@ -794,9 +794,9 @@
       "outputs": [],
       "source": [
         "# Function for aggregating data by spatial unit and mapping data values by that unit (e.g. ZIP code)\n",
-        "from ECHO_modules_delta.utilities import aggregate_by_geography, choropleth\n",
-        "from ECHO_modules_delta.get_data import get_spatial_data # Function for getting zip code boundaries\n",
-        "from ECHO_modules_delta.geographies import spatial_tables # Variables that support spatial queries\n",
+        "from ECHO_modules.utilities import aggregate_by_geography, choropleth\n",
+        "from ECHO_modules.get_data import get_spatial_data # Function for getting zip code boundaries\n",
+        "from ECHO_modules.geographies import spatial_tables # Variables that support spatial queries\n",
         "\n",
         "zips = '14201, 14202, 14203, 14204, 14205, 14206, 14207, 14208, 14209, 14210, 14211, \\\n",
         "14212, 14213, 14214, 14215, 14216, 14217, 14218, 14219, 14220, 14221, 14222, \\\n",
