--- a/ECHO_modules_Tutorials.ipynb
+++ b/ECHO_modules_Tutorials.ipynb
@@ -90,8 +90,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "scrolled": true,
-        "id": "SQcL1Yi7DIF4"
+        "id": "SQcL1Yi7DIF4",
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -108,16 +108,13 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Clone the ECHO_modules delta branch\n",
-        "!git clone -b echo-modules-delta https://github.com/edgi-govdata-archiving/ECHO_modules.git &>/dev/null;\n",
-        "%cd ECHO_modules"
-      ],
-      "metadata": {
-        "id": "uptkYMVpGHM2"
-      },
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Install the ECHO_modules delta branch\n",
+        "%pip install git+https://github.com/edgi-govdata-archiving/ECHO_modules@echo-modules-delta >&/dev/null;"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -130,11 +127,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "lsAwIbDjDIF6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<a href=\"https://portal.gss.stonybrook.edu/api/github-auth\" target=\"_blank\">Get Token</a>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Get the token by clicking the link above, then paste it inside a token.txt file in the current directory.\n",
+            "Waiting for token.txt file...\n",
+            "Still waiting... (10s elapsed)\n",
+            "Still waiting... (20s elapsed)\n",
+            "Still waiting... (30s elapsed)\n",
+            "Still waiting... (40s elapsed)\n",
+            "Still waiting... (50s elapsed)\n",
+            "Token found! Verifying...\n",
+            "✅ Token verified successfully!\n",
+            "Response: {'msg': 'You now have access to the API!'}\n"
+          ]
+        }
+      ],
       "source": [
         "from ECHO_modules.get_data import get_echo_api_access_token\n",
         "\n",
@@ -707,6 +733,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "hiRQyBQDV01O"
+      },
+      "outputs": [],
       "source": [
         "ny_tri = data_sets[\"Toxic Releases\"].store_results(\n",
         "    region_type=\"State\", region_value = \"NY\", state = \"NY\",\n",
@@ -717,12 +748,7 @@
         "ny_tri.dataframe = ny_tri.dataframe.loc[\n",
         "    ny_tri.dataframe['POLLUTANT_NAME'].str.lower().str.contains(\"mercury\")]\n",
         "ny_tri.show_chart() # Chart total mercury emissions in lbs"
-      ],
-      "metadata": {
-        "id": "hiRQyBQDV01O"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -875,7 +901,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "venv",
       "language": "python",
       "name": "python3"
     },
@@ -889,7 +915,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.8.10"
     }
   },
   "nbformat": 4,
