--- a/ECHO_modules_Tutorials.ipynb
+++ b/ECHO_modules_Tutorials.ipynb
@@ -96,14 +96,24 @@
       "outputs": [],
       "source": [
         "# Installation of these not necessary in default Colab environment (already installed)\n",
-        "!pip install geopandas &>/dev/null;\n",
-        "!pip install matplotlib &>/dev/null;\n",
-        "!pip install folium &>/dev/null;\n",
-        "!pip install ipywidgets &>/dev/null;\n",
-        "!pip install ipyleaflet &>/dev/null;\n",
-        "!pip install ipython &>/dev/null;\n",
-        "!pip install seaborn &>/dev/null;\n",
-        "!pip install tqdm &>/dev/null;"
+        "%pip install geopandas &>/dev/null;\n",
+        "%pip install matplotlib &>/dev/null;\n",
+        "%pip install folium &>/dev/null;\n",
+        "%pip install ipywidgets &>/dev/null;\n",
+        "%pip install ipyleaflet &>/dev/null;\n",
+        "%pip install ipython &>/dev/null;\n",
+        "%pip install seaborn &>/dev/null;\n",
+        "%pip install tqdm &>/dev/null;\n",
+        "%pip install pyspark &>/dev/null;\n",
+        "%pip install delta &>/dev/null;\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Install the EDGI ECHO/RSEI data access package\n",
+        "This step is required."
       ]
     },
     {
@@ -112,7 +122,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Install the ECHO_modules delta branch\n",
         "%pip install git+https://github.com/edgi-govdata-archiving/ECHO_modules@echo-modules-delta >&/dev/null;"
       ]
     },
@@ -238,8 +247,8 @@
         "# Use get_top_violators and chart_top_violators\n",
         "from ECHO_modules.utilities import get_top_violators, chart_top_violators\n",
         "\n",
-        "erie_top_violators = get_top_violators( erie, flag = 'RCRA_FLAG',\n",
-        "                                       noncomp_field = 'RCRA_3YR_COMPL_QTRS_HISTORY',\n",
+        "(erie_top_violators, erie_all_violators) = get_top_violators( erie, flag = 'RCRA_FLAG',\n",
+        "                                        noncomp_field = 'RCRA_3YR_COMPL_QTRS_HISTORY',\n",
         "                                        action_field = 'RCRA_FORMAL_ACTION_COUNT',\n",
         "                                        num_fac=10 )\n",
         "chart_top_violators(erie_top_violators, state = 'NY', selections = \"Erie County\",\n",
@@ -461,7 +470,17 @@
       "outputs": [],
       "source": [
         "from ECHO_modules.utilities import polygon_map\n",
-        "area_of_interest = polygon_map()"
+        "(m, area_of_interest) = polygon_map()\n",
+        "display(m)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "area_of_interest"
       ]
     },
     {
@@ -473,6 +492,8 @@
       },
       "outputs": [],
       "source": [
+        "from pandas.errors import EmptyDataError\n",
+        "\n",
         "# Populate the CAA Violations DataSet that was created earlier.\n",
         "# Store results for this DataSet as a DataSetResults object\n",
         "try:\n",
