--- a/ECHO_modules_Tutorials.ipynb
+++ b/ECHO_modules_Tutorials.ipynb
@@ -35,7 +35,7 @@
       },
       "source": [
         "# ECHO_modules\n",
-        "*ECHO_modules* is a Python package repository for analyzing a copy of the US Environmental Protection Agency's (EPA) Enforcement and Compliance History Online (ECHO) database.\n",
+        "*ECHO_modules* is a Python package repository for analyzing a copy of the US Environmental Protection Agency's (EPA) Enforcement and Compliance History Online (ECHO) amd Risk Screening Environmental Indicators (RSEI) databases.\n",
         "\n",
         "### Background\n",
         "The US EPA collects a wide variety of data concerning environmental pollution and makes this available through several portals. The ECHO database collates information on industrial facilities' compliance with environmental protection laws like the Clean Water Act and regulatory agencies' enforcement of those laws. ECHO records reported violations, agency inspections of facilities, penalties paid by companies for infractions. It also incorporates information from other sources, such as reported pollutant releases from the Toxics Release Inventory and socio-economic information from EJScreen.\n",
@@ -79,40 +79,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ejSvfrPwrXhh"
-      },
-      "source": [
-        "# Install ECHO_modules"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "SQcL1Yi7DIF4",
-        "scrolled": true
-      },
-      "outputs": [],
-      "source": [
-        "# Installation of these not necessary in default Colab environment (already installed)\n",
-        "%pip install geopandas &>/dev/null;\n",
-        "%pip install matplotlib &>/dev/null;\n",
-        "%pip install folium &>/dev/null;\n",
-        "%pip install ipywidgets &>/dev/null;\n",
-        "%pip install ipyleaflet &>/dev/null;\n",
-        "%pip install ipython &>/dev/null;\n",
-        "%pip install seaborn &>/dev/null;\n",
-        "%pip install tqdm &>/dev/null;\n",
-        "%pip install pyspark &>/dev/null;\n",
-        "%pip install delta &>/dev/null;\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Install the EDGI ECHO/RSEI data access package\n",
+        "# Install the EDGI ECHO/RSEI data access package\n",
         "This step is required."
       ]
     },
@@ -131,7 +100,8 @@
         "id": "N3cdHLeEDIF5"
       },
       "source": [
-        "## Get an API token\n"
+        "# Get an API token\n",
+        "After running this cell, follow the instructions and save your token in token.txt in the active directory"
       ]
     },
     {
@@ -143,8 +113,7 @@
       "outputs": [],
       "source": [
         "from ECHO_modules.get_data import get_echo_api_access_token\n",
-        "\n",
-        "token = get_echo_api_access_token()"
+        "get_echo_api_access_token()"
       ]
     },
     {
@@ -229,7 +198,7 @@
         "id": "io3mYPYKm-l2"
       },
       "source": [
-        "## Find and Chart the 10 Facilities Least Compliant with the Resource and Conservation Recovery Act (RCRA) over the Past 12 Quarters in this County\n",
+        "## Find and Chart the 10 Facilities Least Compliant with the Resource Conservation and Recovery Act (RCRA) over the Past 12 Quarters in this County\n",
         "\n",
         "EPA provides summary data on inspections, violations, and penalties under various environmental protection laws. In the following example, we access that summary data for RCRA-regulated facilities in Erie County, sort it, and then chart it."
       ]
@@ -244,7 +213,6 @@
       "outputs": [],
       "source": [
         "# Next, we enter the dataframe of Erie County facilities into the get_top_violators() function, then use chart_top_violators to visualize the result\n",
-        "# Use get_top_violators and chart_top_violators\n",
         "from ECHO_modules.utilities import get_top_violators, chart_top_violators\n",
         "\n",
         "(erie_top_violators, erie_all_violators) = get_top_violators( erie, flag = 'RCRA_FLAG',\n",
@@ -286,8 +254,8 @@
         "                                                  erie_top_violators['FAC_LONG'],\n",
         "                                                  erie_top_violators['FAC_LAT']),\n",
         "                                                  crs=4269\n",
-        "                                              )\n",
-        "              ) # Use Geopandas to create a spatial version of this dataframe so that it can be mapped"
+        "                                              ) # Use Geopandas to create a spatial version of this dataframe so that it can be mapped\n",
+        "              ) "
       ]
     },
     {
@@ -428,7 +396,7 @@
         "\n",
         "erie_rcra_violations.region_value=[\"ERIE\"] # (re)set the region_value as a list\n",
         "# Aggregate each entry using this function. In the case of RCRA violations,\n",
-        "# it will summarize each type of violation (permit, schedule, effluent, etc.)\n",
+        "# it will summarize each type of violation\n",
         "# and then aggregate them for each facility over time.\n",
         "# By setting other_records to True, we also get RCRA-regulated facilities in the\n",
         "# county without records of violations.\n",
@@ -488,7 +456,7 @@
         "# Populate the CAA Violations DataSet that was created earlier.\n",
         "# Store results for this DataSet as a DataSetResults object\n",
         "try:\n",
-        "    aoi_caa_violations = data_sets[\"RCRA Violations\"].store_results( region_type=\"Neighborhood\",\n",
+        "    aoi_caa_violations = data_sets[\"CAA Violations\"].store_results( region_type=\"Neighborhood\",\n",
         "                            region_value=list(area_of_interest)[0], years=[2020,2024])\n",
         "except EmptyDataError:\n",
         "    print(\"There are no records in that region for this data set.\")\n",
@@ -504,7 +472,7 @@
         "## Watersheds\n",
         "Many people may not know the formal name of the watershed they live in (and since watersheds are nested within each other, people live in several watersheds of various sizes, each of which likely has a different name, compounding the challenge).\n",
         "\n",
-        "Most people do, however, know which ZIP code or county they live in. To get ECHO data on a watershed basis, first we query the database for the watersheds intersecting a more well-known geography. (Note: technically, we look up watersheds *within* a more well-known geography. Unfortunately, this means some watersheds will never be selected because they are not fully contained by a state. This is an issue to be fixed.)\n",
+        "Most people do, however, know which ZIP code or county they live in. To get ECHO data on a watershed basis, first we query the database for the watersheds intersecting a more well-known geography.\n",
         "\n",
         "In the following example, we get the watersheds that intersect with a state and then look up \"serious violators' of the Safe Drinking Water Act within one of those watersheds.\n",
         "\n",
@@ -549,7 +517,7 @@
       "source": [
         "## Ways of Selecting Records on Facilities\n",
         "\n",
-        "A user may have facility IDs obtained, perhaps, from outside of the ECHO data. As examples, RCRA data uses a field called ID_NUMBER and CAA uses PGM_. The database has mapped program-specific IDs to the REGISTRY_IDs that are used in the ECHO_EXPORTER table. Because of that mapping, we can generally work with the REGISTRY_ID to identify a facility. But we could also get to the same data, in the case of RCRA, by asking for the facilities by their ID_NUMBER.\n",
+        "A user may have facility IDs obtained, perhaps, from outside of the ECHO data. As examples, RCRA data uses a field called ID_NUMBER and CAA uses PGM_ID. The database has mapped program-specific IDs to the REGISTRY_IDs that are used in the ECHO_EXPORTER table. Because of that mapping, we can generally work with the REGISTRY_ID to identify a facility. But we could also get to the same data, in the case of RCRA, by asking for the facilities by their ID_NUMBER.\n",
         "\n",
         "Here we show the two ways of requesting data on facilities, again using RCRA Violations as our example.\n",
         "\n",
@@ -832,50 +800,6 @@
         "           key_id = \"FAC_ZIP\",\n",
         "           legend_name = \"Map\")"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pn85N-N5--GC"
-      },
-      "source": [
-        "## Custom Queries: EJScreen\n",
-        "\n",
-        "Records from EPA's EJScreen (2021) are available through custom SQL queries.\n",
-        "\n",
-        "For example, the following returns EJScreen information for the state of New York and where the % of the population defined as a racial minority is greater than 75% and the % of the population defined as low-income is greater than 50%.\n",
-        "\n",
-        "For more information about EJScreen, see the [documentation](https://gaftp.epa.gov/EJScreen/2021/2021_EJSCREEEN_columns-explained.xlsx) (.xlsx file)."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "LwV-Z_gv4ZSo"
-      },
-      "outputs": [],
-      "source": [
-        "\"\"\"\n",
-        "# Won't work until we load EJScreen data\n",
-        "from ECHO_modules.get_data import get_echo_data\n",
-        "\n",
-        "# This query selects Census Block Group records from EJScreen for the state of New York and where the % of the population defined as a racial minority is greater than 75% and the % of the population defined as low-income is greater than 50%\n",
-        "sql = 'SELECT * FROM \"EJSCREEN_2021_USPR\" WHERE \"ST_ABBREV\" = \\'NY\\' ' +\\\n",
-        "'AND \"MINORPCT\" > .75 AND \"LOWINCPCT\" > .5'\n",
-        "results = get_echo_data(sql)\n",
-        "results\n",
-        "\"\"\""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "dhIAn5VnDIGJ"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
@@ -883,7 +807,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
